--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@
     -ms-user-select: none;
     user-select: none; }
   
+  div#logoDiv {
+    display: flex;
+    justify-content: center;
+  }
+
   html {
     width: 100%;
     height: 100%;
@@ -33,7 +38,6 @@
     left: 50%;
     margin: 90px 0;
     transform: translate(-50%, 0);
-    box-shadow: 0 10px 0 0 #b1b1b1 inset;
     background-color: #ebebeb;
     max-width: 450px;
     padding: 30px; }
@@ -47,7 +51,8 @@
         left: 0; } }
   
   h1, h2 {
-    color: #ff6a00; }
+    color: #ff6a00;
+    text-align: center; }
   
   h1 {
     text-transform: uppercase;
